# emoji-picker

./: .gitignore  .nvimrc  .travis.yml  Cargo.toml  README.md  build.rs  default.nix  shell.nix
nix/naersk/: default.nix  source.json
nix/nixpkgs/: default.nix  source.json
nix/rust-channel/: default.nix  source.json
src/: main.rs
